--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 </head>
-<body ng-app = "iridizeApp" ng-controller = "appCtrl">
+<body ng-app = "myApp" ng-controller = "appCtrl">
     <div class="bckColor rightSize">
         <form>
             <input class="input-sm" type="text" ng-model="searchChoice">
